# zlist

./: .gitignore  .gitlab-ci.yml  .merlin  .ocamlformat  CHANGES.md  README.md  _tags  dune-project  flake.nix  index.html  opam  shell.nix  zlist.opam
.github/workflows/: workflow.yml
ci/: Dockerfile
doc/: api.odocl
lib/: dune  index.mld  jbuild  lazy_list.ml  lazy_list.mli  zlist.ml  zlist.mli
pkg/: META  pkg.ml
test/: .merlin  dune  jbuild  test_zlist.ml
zlist/: index.html
zlist/Zlist/: index.html
