(lang dune 2.7)
(name zlist)
(generate_opam_files true)

(authors "Jesse Haber-Kucharsky <jesse@haber-kucharsky.com>")
(maintainers "Jesse Haber-Kucharsky <jesse@haber-kucharsky.com>")
(source (github hakuch/zlist))
(documentation https://hakuch.github.io/zlist)
(license Apache-2.0)

(package
 (name zlist)
 (synopsis "Lazy lists for OCaml")
 (description "zlist consists of the definition of a lazy list type and a number of useful functions for manipulating and constructing lazy lists."))
