opam-version: "2.0"
maintainer: "Jesse Haber-Kucharsky <jesse@haber-kucharsky.com>"
authors: "Jesse Haber-Kucharsky <jesse@haber-kucharsky.com>"
homepage: "https://gitlab.com/jhaberku/Zlist"
bug-reports: "https://gitlab.com/jhaberku/Zlist/issues"
license: "Apache 2.0"
dev-repo: "git+https://gitlab.com/jhaberku/Zlist"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.7.0"}
  "odoc" {with-doc}
  "ppx_expect" {with-test}
  "ppx_inline_test" {with-test}
]
synopsis: "Lazy lists for OCaml"
description: "zlist consists of the definition of a lazy list type and a number of useful functions for manipulating and constructing lazy lists."
